--- a/iOS/MusicFinder/AuthOtherAccount.xib
+++ b/iOS/MusicFinder/AuthOtherAccount.xib
@@ -12,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AuthOtherAccount" customModule="MusicFinder" customModuleProvider="target">
             <connections>
                 <outlet property="disconnect" destination="92R-hk-cOU" id="Qt4-fh-9Bd"/>
-                <outlet property="label" destination="ava-Fi-cSx" id="9fe-IR-yU5"/>
+                <outlet property="loginButton" destination="3Hu-5R-jeK" id="yVL-na-KbF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,19 +21,24 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundogin" translatesAutoresizingMaskIntoConstraints="NO" id="Xe2-0c-ZvS">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Hu-5R-jeK">
-                    <rect key="frame" x="124" y="318.5" width="127" height="30"/>
-                    <state key="normal" title="Log in with Spotify"/>
+                    <rect key="frame" x="87.5" y="303.5" width="200" height="60"/>
+                    <color key="backgroundColor" red="0.11764705882352941" green="0.84313725490196079" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="Zjb-Jo-OGI"/>
+                        <constraint firstAttribute="height" constant="60" id="sUo-2K-W9G"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
+                    <state key="normal" title="Log in with Spotify">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
                         <action selector="loginSpotifyClicked:" destination="-1" eventType="touchUpInside" id="1GG-UK-zF4"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ava-Fi-cSx">
-                    <rect key="frame" x="166.5" y="277.5" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92R-hk-cOU">
                     <rect key="frame" x="162" y="417" width="90" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,12 +50,17 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Xe2-0c-ZvS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8gg-ZC-aG6"/>
+                <constraint firstItem="Xe2-0c-ZvS" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ASy-UV-38A"/>
+                <constraint firstAttribute="trailing" secondItem="Xe2-0c-ZvS" secondAttribute="trailing" id="Eli-FU-QGW"/>
                 <constraint firstItem="3Hu-5R-jeK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Jy8-p3-skJ"/>
-                <constraint firstItem="ava-Fi-cSx" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ibD-3m-esk"/>
-                <constraint firstItem="3Hu-5R-jeK" firstAttribute="top" secondItem="ava-Fi-cSx" secondAttribute="bottom" constant="20" id="syY-Mg-Tpa"/>
+                <constraint firstAttribute="bottom" secondItem="Xe2-0c-ZvS" secondAttribute="bottom" id="jM3-DI-nyC"/>
                 <constraint firstItem="3Hu-5R-jeK" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="vvw-Jo-GIJ"/>
             </constraints>
             <point key="canvasLocation" x="25.5" y="52.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="backgroundogin" width="540" height="960"/>
+    </resources>
 </document>
