--- a/iOS/MusicFinder/SearchVC.xib
+++ b/iOS/MusicFinder/SearchVC.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchVC" customModule="MusicFinder" customModuleProvider="target">
             <connections>
+                <outlet property="containerView" destination="c8s-eQ-aeY" id="MuG-a5-Fah"/>
                 <outlet property="submitButton" destination="joK-Ya-3sT" id="eaF-30-RjW"/>
                 <outlet property="textField" destination="Wjg-6f-ecS" id="FDR-YO-eGB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -21,23 +22,78 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wjg-6f-ecS">
-                    <rect key="frame" x="139" y="168" width="97" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundsearchvc" translatesAutoresizingMaskIntoConstraints="NO" id="Qx9-M8-Bh1">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Musique, artiste, album" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wjg-6f-ecS">
+                    <rect key="frame" x="72.5" y="170" width="230" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="230" id="ewz-5z-Apo"/>
+                        <constraint firstAttribute="height" constant="40" id="oiD-7T-l99"/>
+                    </constraints>
                     <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joK-Ya-3sT">
-                    <rect key="frame" x="164" y="229" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joK-Ya-3sT">
+                    <rect key="frame" x="107" y="235" width="160" height="40"/>
+                    <color key="backgroundColor" red="1" green="0.89623751222542647" blue="0.20600573857190307" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Bfs-mV-kzB"/>
+                        <constraint firstAttribute="width" constant="160" id="dlo-z4-DML"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
+                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="Rechercher"/>
                     <connections>
                         <action selector="submitClicked:" destination="-1" eventType="touchUpInside" id="4If-sF-VuT"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c8s-eQ-aeY">
+                    <rect key="frame" x="67" y="355" width="240" height="200"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCR-P6-exI">
+                            <rect key="frame" x="20" y="20" width="200" height="160"/>
+                            <attributedString key="attributedText">
+                                <fragment content="Ajoutez les musiques que vous souhaitez dans un de vos quizz ou écoutez un extrait d'un morceau ">
+                                    <attributes>
+                                        <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <font key="NSFont" size="16" name="HiraginoSans-W3"/>
+                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="7" tighteningFactorForTruncation="0.0"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.4961740154109589" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="iCR-P6-exI" firstAttribute="top" secondItem="c8s-eQ-aeY" secondAttribute="top" constant="20" id="PtK-J9-FAl"/>
+                        <constraint firstAttribute="trailing" secondItem="iCR-P6-exI" secondAttribute="trailing" constant="20" id="Rkf-f9-0aL"/>
+                        <constraint firstAttribute="bottom" secondItem="iCR-P6-exI" secondAttribute="bottom" constant="20" id="TDn-LV-uUZ"/>
+                        <constraint firstAttribute="height" constant="200" id="dOF-Go-z2m"/>
+                        <constraint firstItem="iCR-P6-exI" firstAttribute="leading" secondItem="c8s-eQ-aeY" secondAttribute="leading" constant="20" id="edt-c1-bVc"/>
+                        <constraint firstAttribute="width" constant="240" id="k6q-LH-2VD"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Qx9-M8-Bh1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="6WH-Bl-IXX"/>
+                <constraint firstItem="joK-Ya-3sT" firstAttribute="top" secondItem="Wjg-6f-ecS" secondAttribute="bottom" constant="25" id="7bH-Gb-lU8"/>
+                <constraint firstAttribute="trailing" secondItem="Qx9-M8-Bh1" secondAttribute="trailing" id="NbA-oz-fio"/>
+                <constraint firstItem="Wjg-6f-ecS" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="170" id="QcU-w1-JiE"/>
+                <constraint firstItem="c8s-eQ-aeY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Ynr-1I-tYL"/>
+                <constraint firstItem="joK-Ya-3sT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Yvv-4w-qxC"/>
+                <constraint firstItem="Wjg-6f-ecS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="gCq-VS-1Y4"/>
+                <constraint firstAttribute="bottom" secondItem="Qx9-M8-Bh1" secondAttribute="bottom" id="ls1-Yt-hpi"/>
+                <constraint firstItem="c8s-eQ-aeY" firstAttribute="top" secondItem="joK-Ya-3sT" secondAttribute="bottom" constant="80" id="mag-xk-zNu"/>
+                <constraint firstItem="Qx9-M8-Bh1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vxd-h2-srq"/>
+            </constraints>
+            <point key="canvasLocation" x="34.5" y="75.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="backgroundsearchvc" width="540" height="960"/>
+    </resources>
 </document>
