--- a/iOS/MusicFinder/Home2VC.xib
+++ b/iOS/MusicFinder/Home2VC.xib
@@ -28,7 +28,7 @@
                     <rect key="frame" x="176" y="580" width="23" height="37"/>
                 </pageControl>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="qaf-qj-rw0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="6cD-mL-kLE"/>
                 <constraint firstItem="qaf-qj-rw0" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" id="9PM-Kh-Euf"/>
